--- a/application/Testrigg/app/src/main/AndroidManifest.xml
+++ b/application/Testrigg/app/src/main/AndroidManifest.xml
@@ -48,7 +48,10 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+            android:label="@string/title_activity_maps" />
+        <activity
+            android:name=".ViewMeasurementOnMapActivity"
+            android:label="@string/title_activity_view_measurement_on_map"></activity>
     </application>
 
 </manifest>
